[gd_scene load_steps=20 format=3 uid="uid://df7ydug4vbcgj"]

[ext_resource type="Material" uid="uid://cn1gsy15bkaff" path="res://materials/grid.tres" id="1_a577l"]
[ext_resource type="Script" path="res://World.gd" id="1_m3ber"]
[ext_resource type="Texture2D" uid="uid://b1jvh1ehiaebt" path="res://textures/industrial_sunset_puresky_4k.hdr" id="2_2cry1"]
[ext_resource type="Texture2D" uid="uid://ivvpsi314b34" path="res://textures/grid.jpg" id="4_5oqei"]
[ext_resource type="PackedScene" uid="uid://dc08vcyt1usbf" path="res://box.tscn" id="5_n3ly4"]
[ext_resource type="PackedScene" uid="uid://c4e8oxy821wlr" path="res://skeleton_warrior.tscn" id="5_yv5kp"]
[ext_resource type="PackedScene" uid="uid://dn57v6t27ts8i" path="res://red_character.tscn" id="7_7hpj6"]
[ext_resource type="Script" path="res://player.gd" id="8_tdka1"]
[ext_resource type="Script" path="res://SpringArm3D.gd" id="9_lb7k1"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_twjed"]
panorama = ExtResource("2_2cry1")

[sub_resource type="Sky" id="Sky_i3l42"]
sky_material = SubResource("PanoramaSkyMaterial_twjed")

[sub_resource type="Environment" id="Environment_md87b"]
background_mode = 2
sky = SubResource("Sky_i3l42")

[sub_resource type="BoxMesh" id="BoxMesh_tb7ga"]
material = ExtResource("1_a577l")
size = Vector3(20, 0.5, 20)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_plmea"]
data = PackedVector3Array(-10, 0.25, 10, 10, 0.25, 10, -10, -0.25, 10, 10, 0.25, 10, 10, -0.25, 10, -10, -0.25, 10, 10, 0.25, -10, -10, 0.25, -10, 10, -0.25, -10, -10, 0.25, -10, -10, -0.25, -10, 10, -0.25, -10, 10, 0.25, 10, 10, 0.25, -10, 10, -0.25, 10, 10, 0.25, -10, 10, -0.25, -10, 10, -0.25, 10, -10, 0.25, -10, -10, 0.25, 10, -10, -0.25, -10, -10, 0.25, 10, -10, -0.25, 10, -10, -0.25, -10, 10, 0.25, 10, -10, 0.25, 10, 10, 0.25, -10, -10, 0.25, 10, -10, 0.25, -10, 10, 0.25, -10, -10, -0.25, 10, 10, -0.25, 10, -10, -0.25, -10, 10, -0.25, 10, 10, -0.25, -10, -10, -0.25, -10)

[sub_resource type="Shader" id="Shader_cwof1"]
code = "// NOTE: Shader automatically converted from Godot Engine 4.1.dev4's StandardMaterial3D.

shader_type spatial;
render_mode blend_mix,depth_draw_opaque,cull_back,diffuse_burley,specular_schlick_ggx;
uniform vec4 albedo : source_color;
uniform sampler2D texture_albedo : source_color,filter_linear_mipmap,repeat_enable;
uniform float point_size : hint_range(0,128);
uniform float roughness : hint_range(0,1);
uniform sampler2D texture_metallic : hint_default_white,filter_linear_mipmap,repeat_enable;
uniform vec4 metallic_texture_channel;
uniform sampler2D texture_roughness : hint_roughness_r,filter_linear_mipmap,repeat_enable;
uniform float specular;
uniform float metallic;
varying vec3 uv1_triplanar_pos;
uniform float uv1_blend_sharpness;
varying vec3 uv1_power_normal;
uniform vec3 uv1_scale;
uniform vec3 uv1_offset;
uniform vec3 uv2_scale;
uniform vec3 uv2_offset;


void vertex() {
	TANGENT = vec3(0.0,0.0,-1.0) * abs(NORMAL.x);
	TANGENT+= vec3(1.0,0.0,0.0) * abs(NORMAL.y);
	TANGENT+= vec3(1.0,0.0,0.0) * abs(NORMAL.z);
	TANGENT = normalize(TANGENT);
	BINORMAL = vec3(0.0,1.0,0.0) * abs(NORMAL.x);
	BINORMAL+= vec3(0.0,0.0,-1.0) * abs(NORMAL.y);
	BINORMAL+= vec3(0.0,1.0,0.0) * abs(NORMAL.z);
	BINORMAL = normalize(BINORMAL);
	uv1_power_normal=pow(abs(NORMAL),vec3(uv1_blend_sharpness));
	uv1_triplanar_pos = VERTEX * uv1_scale + uv1_offset;
	uv1_power_normal/=dot(uv1_power_normal,vec3(1.0));
	uv1_triplanar_pos *= vec3(1.0,-1.0, 1.0);
}

vec4 triplanar_texture(sampler2D p_sampler,vec3 p_weights,vec3 p_triplanar_pos) {
	vec4 samp=vec4(0.0);
	samp+= texture(p_sampler,p_triplanar_pos.xy) * p_weights.z;
	samp+= texture(p_sampler,p_triplanar_pos.xz) * p_weights.y;
	samp+= texture(p_sampler,p_triplanar_pos.zy * vec2(-1.0,1.0)) * p_weights.x;
	return samp;
}

void fragment() {
	vec4 albedo_tex = triplanar_texture(texture_albedo,uv1_power_normal,uv1_triplanar_pos);
	ALBEDO = (albedo.rgb * albedo_tex.r) + albedo_tex.g + albedo_tex.b;
	float metallic_tex = dot(triplanar_texture(texture_metallic,uv1_power_normal,uv1_triplanar_pos),metallic_texture_channel);
	METALLIC = metallic_tex * metallic;
	vec4 roughness_texture_channel = vec4(1.0,0.0,0.0,0.0);
	float roughness_tex = dot(triplanar_texture(texture_roughness,uv1_power_normal,uv1_triplanar_pos),roughness_texture_channel);
	ROUGHNESS = (1.0 - albedo_tex.g) * roughness;
	SPECULAR = specular;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t8k35"]
render_priority = 0
shader = SubResource("Shader_cwof1")
shader_parameter/albedo = Color(0.165184, 0.432987, 0.609947, 1)
shader_parameter/point_size = 1.0
shader_parameter/roughness = 0.5
shader_parameter/metallic_texture_channel = null
shader_parameter/specular = 0.5
shader_parameter/metallic = 0.0
shader_parameter/uv1_blend_sharpness = 1.0
shader_parameter/uv1_scale = Vector3(0.5, 0.5, 0.5)
shader_parameter/uv1_offset = Vector3(0, 0, 0)
shader_parameter/uv2_scale = Vector3(1, 1, 1)
shader_parameter/uv2_offset = Vector3(0, 0, 0)
shader_parameter/texture_albedo = ExtResource("4_5oqei")
shader_parameter/texture_roughness = ExtResource("4_5oqei")

[sub_resource type="BoxMesh" id="BoxMesh_rgy4o"]
material = SubResource("ShaderMaterial_t8k35")

[sub_resource type="SphereShape3D" id="SphereShape3D_d561e"]

[sub_resource type="SphereMesh" id="SphereMesh_fm3md"]

[node name="World" type="Node3D"]
script = ExtResource("1_m3ber")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_md87b")

[node name="Floor" type="MeshInstance3D" parent="."]
transform = Transform3D(4, 0, 0, 0, 1, 0, 0, 0, 4, 0, 0, 0)
mesh = SubResource("BoxMesh_tb7ga")

[node name="StaticBody3D" type="StaticBody3D" parent="Floor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor/StaticBody3D"]
visible = false
shape = SubResource("ConcavePolygonShape3D_plmea")

[node name="Enemies" type="Node3D" parent="."]

[node name="Box" parent="Enemies" groups=["Enemies"] instance=ExtResource("5_n3ly4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.11318, 0.740492, -4.00735)

[node name="Allies" type="Node3D" parent="."]

[node name="Box3" parent="Allies" groups=["Allies"] instance=ExtResource("5_n3ly4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.774532, 0)
mesh = SubResource("BoxMesh_rgy4o")
skeleton = NodePath("../../Enemies")

[node name="Skeleton_Warrior" parent="." instance=ExtResource("5_yv5kp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 5)

[node name="Enemies_in_range_label" type="Label3D" parent="."]
transform = Transform3D(8.315, 0, 0, 0, 8.315, 0, 0, 0, 8.315, -5.19457, 3.55112, -10.5572)

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(12.18, 0, 0, 0, 12.18, 0, 0, 0, 12.18, -18.1581, 0.25, -2.63649)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(6.03, 0, 0, 0, 6.03, 0, 0, 0, 6.03, 0, 0, 0)
shape = SubResource("SphereShape3D_d561e")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Area3D/CollisionShape3D"]
visible = false
mesh = SubResource("SphereMesh_fm3md")

[node name="red_character" parent="." instance=ExtResource("7_7hpj6")]
transform = Transform3D(0.0113444, 0, 0.999936, 0, 1, 0, -0.999936, 0, 0.0113444, -15.6492, 0.25, 6.50477)
script = ExtResource("8_tdka1")

[node name="AnimationTree" parent="red_character" index="0"]
parameters/strafe/blend_position = Vector2(0, 0)

[node name="Skeleton3D" parent="red_character/Armature_002" index="0"]
bones/0/position = Vector3(0.815478, 1.30749, -98.588)
bones/0/rotation = Quaternion(-0.677638, 0.185216, -0.144017, 0.696965)
bones/1/position = Vector3(-4.16611e-10, 10.1824, 1.63913e-07)
bones/1/rotation = Quaternion(-0.0593835, 0.0240109, -0.0117818, 0.997877)
bones/2/position = Vector3(-6.41931e-12, 10.0027, 1.93715e-06)
bones/2/rotation = Quaternion(0.0471093, 0.0515432, -0.0271213, 0.99719)
bones/3/position = Vector3(-6.21725e-13, 9.32207, -5.96046e-07)
bones/3/rotation = Quaternion(0.0602577, 0.0506784, -0.0279119, 0.996505)
bones/4/position = Vector3(4.14317e-10, 16.8653, 2.38419e-07)
bones/4/rotation = Quaternion(0.0168603, 0.0948894, 0.0226362, 0.995088)
bones/5/rotation = Quaternion(0.119398, 0.511821, -0.0788677, 0.847091)
bones/6/position = Vector3(9.85696e-07, 20.9628, 10.1229)
bones/7/position = Vector3(-4.56997, 11.1958, -0.806632)
bones/7/rotation = Quaternion(-0.500486, 0.55541, -0.586089, -0.312303)
bones/8/position = Vector3(-4.83387e-07, 10.8382, 1.29063e-05)
bones/8/rotation = Quaternion(0.31791, -0.221407, -0.309641, 0.868352)
bones/9/position = Vector3(4.75916e-06, 27.8415, -1.08461e-06)
bones/9/rotation = Quaternion(8.78625e-08, -8.03229e-08, -0.336473, 0.941693)
bones/10/position = Vector3(2.64981e-05, 28.3288, 4.53886e-06)
bones/10/rotation = Quaternion(-0.105933, -0.042952, -0.0275964, 0.993062)
bones/11/position = Vector3(2.68185, 2.46481, 1.57399)
bones/11/rotation = Quaternion(0.192924, 0.069078, -0.198048, 0.958533)
bones/12/position = Vector3(1.90735e-06, 4.18899, 7.11515e-06)
bones/12/rotation = Quaternion(-0.0604121, 0.0577139, 0.253927, 0.963608)
bones/13/position = Vector3(6.07967e-06, 3.41626, -3.78358e-06)
bones/13/rotation = Quaternion(-0.0453713, 0.0285852, 0.080251, 0.995331)
bones/14/position = Vector3(-1.03617e-06, 2.57498, -6.21343e-06)
bones/15/position = Vector3(2.25983, 9.10829, 0.517868)
bones/15/rotation = Quaternion(0.242324, -1.05163e-07, 0.0295327, 0.969746)
bones/16/position = Vector3(2.91133e-07, 3.69999, 5.62467e-07)
bones/16/rotation = Quaternion(0.10708, 3.31506e-07, 0.013051, 0.994165)
bones/17/position = Vector3(-6.47087e-08, 2.85001, 2.05763e-07)
bones/17/rotation = Quaternion(0.053629, -2.42002e-07, 0.006535, 0.99854)
bones/18/position = Vector3(-4.47108e-08, 2.77219, -5.25441e-06)
bones/19/position = Vector3(-2.61591e-05, 9.53252, 3.64764e-05)
bones/19/rotation = Quaternion(0.242324, 2.97679e-08, 0.0295328, 0.969746)
bones/20/position = Vector3(1.14152e-06, 3.70002, -5.46735e-06)
bones/20/rotation = Quaternion(0.107083, 1.52755e-07, 0.0130509, 0.994165)
bones/21/position = Vector3(-4.02008e-07, 2.95, -5.42922e-06)
bones/21/rotation = Quaternion(0.0536235, -1.94654e-07, 0.006535, 0.99854)
bones/22/position = Vector3(-4.01207e-07, 2.94664, 1.32651e-06)
bones/23/position = Vector3(-1.86514, 9.1036, 0.043061)
bones/23/rotation = Quaternion(0.242324, 2.68925e-08, 0.0295325, 0.969746)
bones/24/position = Vector3(2.58176e-07, 3.37928, -9.78343e-07)
bones/24/rotation = Quaternion(0.107083, 2.15053e-07, 0.0130512, 0.994165)
bones/25/position = Vector3(-1.53406e-07, 2.88968, -1.774e-06)
bones/25/rotation = Quaternion(0.0536235, -9.78297e-08, 0.00653476, 0.99854)
bones/26/position = Vector3(-7.46236e-07, 2.63881, -4.75438e-06)
bones/27/position = Vector3(-3.80628, 8.07668, 0.486691)
bones/27/rotation = Quaternion(0.242323, 1.48123e-07, 0.0295331, 0.969746)
bones/28/position = Vector3(-3.01202e-08, 3.6, -2.13743e-06)
bones/28/rotation = Quaternion(0.107085, 1.78581e-07, 0.0130508, 0.994164)
bones/29/position = Vector3(-1.11986e-06, 2.09999, -1.03357e-05)
bones/29/rotation = Quaternion(0.0536245, -3.22768e-07, 0.00653447, 0.99854)
bones/30/position = Vector3(-1.17017e-06, 2.11577, -4.388e-06)
bones/31/position = Vector3(4.57045, 11.1957, -0.806626)
bones/31/rotation = Quaternion(0.560355, 0.515129, -0.535383, 0.366074)
bones/32/position = Vector3(-4.76837e-07, 10.8377, -2.02153e-06)
bones/32/rotation = Quaternion(0.460296, 0.118395, 0.109825, 0.872954)
bones/33/position = Vector3(6.28457e-07, 27.8415, 6.22588e-06)
bones/33/rotation = Quaternion(3.33929e-07, -3.46043e-07, 0.520234, 0.854024)
bones/34/position = Vector3(6.12936e-06, 28.3288, 6.23057e-06)
bones/34/rotation = Quaternion(0.0220385, 0.167232, -0.0937797, 0.9812)
bones/35/position = Vector3(-2.68173, 2.46614, 1.57619)
bones/35/rotation = Quaternion(0.181054, 0.0992662, 0.162535, 0.964856)
bones/36/position = Vector3(-1.54972e-06, 4.1871, -8.58006e-06)
bones/36/rotation = Quaternion(-0.0645085, -0.0583927, -0.245913, 0.965379)
bones/37/position = Vector3(-8.22544e-06, 3.41839, 3.48625e-06)
bones/37/rotation = Quaternion(-0.0492703, -0.0283799, -0.0964171, 0.993716)
bones/38/position = Vector3(-2.90946e-06, 2.58058, -1.87682e-05)
bones/39/position = Vector3(-2.25986, 9.1093, 0.518033)
bones/39/rotation = Quaternion(0.242365, -2.61944e-07, -0.0292482, 0.969744)
bones/40/position = Vector3(1.80713e-06, 3.69999, 2.60881e-07)
bones/40/rotation = Quaternion(0.107136, -1.96149e-08, -0.0129287, 0.99416)
bones/41/position = Vector3(2.29265e-07, 2.85002, -8.06856e-06)
bones/41/rotation = Quaternion(0.053646, -3.12173e-07, -0.00647401, 0.998539)
bones/42/position = Vector3(-2.4792e-07, 2.77486, 1.53925e-06)
bones/43/position = Vector3(-3.01497e-05, 9.53339, -3.72393e-05)
bones/43/rotation = Quaternion(0.242228, -4.50642e-07, -0.0292324, 0.969779)
bones/44/position = Vector3(2.93684e-07, 3.70001, -7.33839e-07)
bones/44/rotation = Quaternion(0.107277, -9.3093e-09, -0.0129455, 0.994145)
bones/45/position = Vector3(-7.89749e-07, 2.95, 5.37346e-06)
bones/45/rotation = Quaternion(0.0536434, -4.19825e-07, -0.00647438, 0.998539)
bones/46/position = Vector3(-3.41319e-07, 2.95288, -2.20348e-06)
bones/47/position = Vector3(1.86509, 9.10453, 0.043033)
bones/47/rotation = Quaternion(0.242363, -2.84992e-07, -0.0292484, 0.969745)
bones/48/position = Vector3(1.21889e-06, 3.15002, 2.89108e-07)
bones/48/rotation = Quaternion(0.107138, -1.31093e-07, -0.0129292, 0.99416)
bones/49/position = Vector3(-1.23848e-07, 2.95, -5.32404e-06)
bones/49/rotation = Quaternion(0.0536433, -6.3188e-07, -0.00647436, 0.998539)
bones/50/position = Vector3(-2.3389e-05, 2.64432, 1.67259e-05)
bones/51/position = Vector3(3.80626, 8.07777, 0.486878)
bones/51/rotation = Quaternion(0.237893, 0.00870312, -0.0635326, 0.969172)
bones/52/position = Vector3(-3.55587e-06, 3.59998, -1.96191e-06)
bones/52/rotation = Quaternion(0.111489, 0.00384686, 0.0222451, 0.993509)
bones/53/position = Vector3(1.49673e-06, 2.10002, 7.67315e-07)
bones/53/rotation = Quaternion(0.0536531, 5.21809e-07, -0.00647351, 0.998539)
bones/54/position = Vector3(-5.55534e-07, 2.12552, -8.40792e-06)
bones/55/rotation = Quaternion(-0.120979, 0.1657, 0.977135, 0.055802)
bones/56/position = Vector3(7.40101e-07, 44.3715, -4.82482e-08)
bones/56/rotation = Quaternion(-0.369586, 0.0857814, 0.00858302, 0.925189)
bones/57/position = Vector3(-1.14245e-06, 44.5278, 2.2296e-07)
bones/57/rotation = Quaternion(0.615124, 0.0450416, -0.0267506, 0.786688)
bones/58/position = Vector3(-5.1651e-07, 13.8169, -1.85985e-06)
bones/58/rotation = Quaternion(0.353244, -4.01969e-08, -1.11343e-07, 0.935531)
bones/59/position = Vector3(-5.49177e-07, 9.27812, 1.22569e-07)
bones/60/position = Vector3(8.20779, -6.77179, -1.51221)
bones/60/rotation = Quaternion(0.025346, 0.249424, 0.967502, -0.0329364)
bones/61/position = Vector3(8.49408e-07, 44.3714, 5.43901e-09)
bones/61/rotation = Quaternion(-0.381557, 0.00471127, 0.00991692, 0.92428)
bones/62/position = Vector3(-2.91393e-07, 44.5279, -1.76532e-07)
bones/62/rotation = Quaternion(0.466773, -0.00584148, -0.0120311, 0.884276)
bones/63/position = Vector3(6.41195e-07, 13.8169, 1.30651e-06)
bones/63/rotation = Quaternion(0.396209, -0.0480835, -0.0174991, 0.916733)
bones/64/position = Vector3(4.04477e-07, 9.27814, 1.08951e-06)

[node name="SpringArm3D" parent="red_character" index="4"]
script = ExtResource("9_lb7k1")

[editable path="red_character"]
